# simple-webapp

./: .dockerignore  .env.example  .gitignore  .pre-commmit-config.yaml.bak  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 17ff0663bc3f_add_user_data.py  47dc6e9da235_users_table.py  64c4665bb6da_update.py  7973250a27f5_remove_password_char_limit_2.py  e56751fa3090_remove_password_char_limit.py
app/: main.py
app/admin/: models.py  routers.py  schemas.py  services.py
app/auth/: dependencies.py  exceptions.py  routers.py  schemas.py  services.py
app/config/: database.py  settigs.py  settings.py
app/core/: dependencies.py  exceptions.py  utils.py
app/shared/models/: base.py  mixin.py
app/shared/schemas/: responses.py
app/shared/services/: pdf_generation.py
app/user/: routers.py  schemas.py
docker/: .env.example  Dockerfile  compose.dev.yaml  docker-compose-dev.yaml
scripts/: add_admin.py  migration.py  setup.py
static/css/: style.css
static/html/: dashboard.html  login.html
static/js/: admin.js  api.js  auth.js  dashboard.js  pdf.js  profile.js
templates/: profile.html  users.html
